cmake_minimum_required(VERSION 2.6)
project(joint_cloud_point_v7)
set(CMAKE_CXX_FLAGS "-std=c++11 -o3")
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
include_directories("usr/include/eigen3")
link_libraries(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(joint_cloud_point_v7 main.cpp)
target_link_libraries(joint_cloud_point_v7 ${PCL_LIBRARIES})
install(TARGETS joint_cloud_point_v7 RUNTIME DESTINATION bin)
